@@ -2,8 +2,6 @@
 open Pdfutil
 open Pdfio
 
-(* FIXME Extractors (text, charcode) should work on fonts not fontdicts. Add these. *)
-
 (* Type 3 Specific Glyph Data *)
 type type3_glpyhs =
   {fontbbox : float * float * float * float;
@@ -35,7 +33,8 @@ type fontdescriptor =
    avgwidth : float;
    maxwidth : float;
    fontfile : fontfile option;
-   charset : string list option}
+   charset : string list option;
+   tounicode : (int, string) Hashtbl.t option} (* Hack. Hide tounicode in fontdescriptor, because no space at top level *)
 
 type differences = (string * int) list
 
@@ -231,7 +230,8 @@ let read_fontdescriptor pdf font =
            avgwidth = avgwidth;
            maxwidth = maxwidth;
            fontfile = fontfile;
-           charset = charset}
+           charset = charset;
+           tounicode = None} (* hack. do it later *)
 
 (* Read the widths from a font. Normally in the font descriptor, but in Type3
 fonts at the top level. *)
@@ -550,71 +550,6 @@ let read_cidkeyed_font pdf font =
   in
     CIDKeyedFont (basefont, composite_CIDfont, encoding)
 
-(* Reads a font *)
-let read_font pdf fontdict =
-  if is_standard14font pdf fontdict
-    then read_standard14font pdf fontdict
-    else if is_simple_font pdf fontdict
-      then read_simple_font pdf fontdict
-      else if is_cidkeyed_font pdf fontdict
-        then read_cidkeyed_font pdf fontdict
-        else raise (Pdf.PDFError "Unknown font type")
-
-(* Write a font. Currently only works for our own special Type 3 fonts
-generated by the Pdfcff module, but eventually, when we support font embedding,
-it'll work for lots of kinds. *)
-let make_font fontname =
-  Pdf.Dictionary
-    [("/Type", Pdf.Name "/Font");
-     ("/Subtype", Pdf.Name "/Type1");
-     ("/Encoding", Pdf.Name "/WinAnsiEncoding");
-     ("/BaseFont", Pdf.Name ("/" ^ fontname))]
-
-let write_encoding pdf = function
-  | CustomEncoding (ImplicitInFontFile, diffs) ->
-      let diffarray =
-        Pdf.Array
-          (flatten (map (function (name, number) -> [Pdf.Integer number; Pdf.Name name]) diffs))
-      in
-        let encodingdict =
-          Pdf.Dictionary
-            [("/Type", Pdf.Name "/Encoding");
-             ("/Differences", diffarray)]
-        in
-          Pdf.addobj pdf encodingdict
-  | _ -> raise (Pdf.PDFError "write_encoding: not supported")
- 
-let write_font pdf = function
-  | SimpleFont
-      {fonttype = Type3
-         {fontbbox = fontbbox;
-          fontmatrix = fontmatrix;
-          charprocs = charprocs};
-       encoding = encoding;
-       fontdescriptor = Some fontdescriptor} ->
-        let encoding_entry =
-          match encoding with
-          | ImplicitInFontFile -> []
-          | _ -> [("/Encoding", Pdf.Indirect (write_encoding pdf encoding))]
-        in
-          let dict =
-            Pdf.Dictionary
-              ([("/Type", Pdf.Name "/Font");
-               ("/Subtype", Pdf.Name "/Type3");
-               ("/FontBBox", Pdf.Array [Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.]);
-               ("/FontMatrix", Pdf.Array [Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.]);
-               ("/CharProcs", Pdf.Dictionary (map (fun (s, _) -> (s, Pdf.Null)) charprocs));
-               ("/FirstChar", Pdf.Integer 0);
-               ("/LastChar", Pdf.Integer 0);
-               ("/Widths", Pdf.Array [Pdf.Real 0.])] @ encoding_entry)
-          in
-            Pdf.addobj pdf dict
-  | StandardFont (standard_font, WinAnsiEncoding) ->
-      Pdf.addobj pdf (make_font (string_of_standard_font standard_font))
-  | _ -> raise (Pdf.PDFError "write_font only supports type 3 fonts")
-
-(* Font encodings *)
-
 (* Parse a /ToUnicode CMap to extract font mapping. *)
 type section =
   | BfChar of char list
@@ -778,6 +713,108 @@ let rec parse_tounicode pdf tounicode =
       parse_tounicode pdf tounicode
   | e -> raise (Pdf.PDFError (Printf.sprintf "Bad /ToUnicode %s" (Pdfwrite.string_of_pdf e)))
 
+(* We didn't originally parse the /ToUnicode when reading the font, but we
+   should have. The hack now is to hide the parsed /ToUnicode hash table in the
+   fontdescriptor. To avoid complicated code, we read the font as normal, then
+   read the /ToUnicode, and insert it into the Font descriptor. *)
+let add_tounicode pdf font fontdict =
+  let tounicode =
+    match Pdf.lookup_direct pdf "/ToUnicode" fontdict with
+    | Some tounicode ->
+        begin try
+          Some (hashtable_of_dictionary <| parse_tounicode pdf tounicode)
+        with
+          e -> Printf.eprintf "bad tounicode (%s)\n%!" (Printexc.to_string e); None
+        end
+    | None -> None
+  in
+    match font with
+    | SimpleFont ({fontdescriptor = Some fd} as r) ->
+        SimpleFont {r with fontdescriptor = Some {fd with tounicode}}
+    | SimpleFont ({fontdescriptor = None} as r) ->
+        SimpleFont {r with fontdescriptor = (* fabricate one. ok? fix somehow in future... *)
+                      Some {ascent = 0.;
+                            descent = 0.;
+                            leading = 0.;
+                            avgwidth = 0.;
+                            maxwidth = 0.;
+                            fontfile = None;
+                            charset = None; tounicode}}
+    | CIDKeyedFont (a, ({cid_fontdescriptor} as r), c) ->
+        CIDKeyedFont (a, {r with cid_fontdescriptor = {r.cid_fontdescriptor with tounicode}}, c) 
+    | x -> x 
+
+let find_tounicode = function
+  | SimpleFont {fontdescriptor = Some {tounicode}}
+  | CIDKeyedFont (_, {cid_fontdescriptor = {tounicode}}, _) -> tounicode
+  | _ -> None
+
+(* Reads a font *)
+let read_font pdf fontdict =
+  let without_tounicode =
+    if is_standard14font pdf fontdict
+      then read_standard14font pdf fontdict
+      else if is_simple_font pdf fontdict
+        then read_simple_font pdf fontdict
+        else if is_cidkeyed_font pdf fontdict
+          then read_cidkeyed_font pdf fontdict
+          else raise (Pdf.PDFError "Unknown font type")
+  in
+    add_tounicode pdf without_tounicode fontdict
+
+(* Write a font. Currently only works for our own special Type 3 fonts
+generated by the Pdfcff module, but eventually, when we support font embedding,
+it'll work for lots of kinds. *)
+let make_font fontname =
+  Pdf.Dictionary
+    [("/Type", Pdf.Name "/Font");
+     ("/Subtype", Pdf.Name "/Type1");
+     ("/Encoding", Pdf.Name "/WinAnsiEncoding");
+     ("/BaseFont", Pdf.Name ("/" ^ fontname))]
+
+let write_encoding pdf = function
+  | CustomEncoding (ImplicitInFontFile, diffs) ->
+      let diffarray =
+        Pdf.Array
+          (flatten (map (function (name, number) -> [Pdf.Integer number; Pdf.Name name]) diffs))
+      in
+        let encodingdict =
+          Pdf.Dictionary
+            [("/Type", Pdf.Name "/Encoding");
+             ("/Differences", diffarray)]
+        in
+          Pdf.addobj pdf encodingdict
+  | _ -> raise (Pdf.PDFError "write_encoding: not supported")
+ 
+let write_font pdf = function
+  | SimpleFont
+      {fonttype = Type3
+         {fontbbox = fontbbox;
+          fontmatrix = fontmatrix;
+          charprocs = charprocs};
+       encoding = encoding;
+       fontdescriptor = Some fontdescriptor} ->
+        let encoding_entry =
+          match encoding with
+          | ImplicitInFontFile -> []
+          | _ -> [("/Encoding", Pdf.Indirect (write_encoding pdf encoding))]
+        in
+          let dict =
+            Pdf.Dictionary
+              ([("/Type", Pdf.Name "/Font");
+               ("/Subtype", Pdf.Name "/Type3");
+               ("/FontBBox", Pdf.Array [Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.]);
+               ("/FontMatrix", Pdf.Array [Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.; Pdf.Real 0.]);
+               ("/CharProcs", Pdf.Dictionary (map (fun (s, _) -> (s, Pdf.Null)) charprocs));
+               ("/FirstChar", Pdf.Integer 0);
+               ("/LastChar", Pdf.Integer 0);
+               ("/Widths", Pdf.Array [Pdf.Real 0.])] @ encoding_entry)
+          in
+            Pdf.addobj pdf dict
+  | StandardFont (standard_font, WinAnsiEncoding) ->
+      Pdf.addobj pdf (make_font (string_of_standard_font standard_font))
+  | _ -> raise (Pdf.PDFError "write_font only supports type 3 fonts")
+
 (* Extracting of Text *)
 
 (* A text extractor takes a character and returns a decoded PDF codepoint, a
@@ -881,23 +918,19 @@ parse it, we do.
 
 FIXME: InlineImages2.pdf - Acrobat can extract text, why can't we?
 *)
-let text_extractor_of_font pdf font =
+let text_extractor_of_font pdf fontdict =
+  let font = read_font pdf fontdict in
   {convert =
      (let encoding =
-        match read_font pdf font with
+        match font with
         | StandardFont (_, e) -> e
         | SimpleFont {encoding = e} -> e
         | _ -> ImplicitInFontFile (* No support *)
       in
         let table = table_of_encoding encoding in
           let tounicode_table, use_tounicode =
-            match Pdf.lookup_direct pdf "/ToUnicode" font with
-            | Some tounicode ->
-                begin try
-                  hashtable_of_dictionary <| parse_tounicode pdf tounicode, true
-                with
-                  e -> Printf.eprintf "bad tounicode (%s)\n%!" (Printexc.to_string e); (null_hash (), false)
-                end
+            match find_tounicode font with
+            | Some tu -> tu, true
             | None -> null_hash (), false
           in
             if use_tounicode then
@@ -918,7 +951,7 @@ let text_extractor_of_font pdf font =
                       _ -> ("/" ^ decoded, [i])
                 with
                 _ -> (* Failed *) (".notdef", [i]));
-    font = read_font pdf font}
+    font}
 
 (* For now, the only composite font encoding scheme we understand is /Identity-H *)
 let is_identity_h = function
@@ -941,11 +974,8 @@ let glyphnames_of_text extractor text =
 
 (* Charcode extractor (the opposite of a text extractor) Return the character
 code for a given unicode codepoint, if it exists in this encoding and font. *)
-let charcode_extractor_of_font ?(debug=false) pdf fontobj =
-  let font =
-    try read_font pdf fontobj with
-      e -> raise (Pdf.PDFError "charcode_extractor_of_font: font failed reading")
-  in
+let charcode_extractor_of_font ?(debug=false) pdf fontdict =
+  let font = read_font pdf fontdict in
   if debug then flprint ((string_of_font font) ^ "\n");
   let encoding =
     match font with
@@ -954,11 +984,11 @@ let charcode_extractor_of_font ?(debug=false) pdf fontobj =
     | _ -> ImplicitInFontFile (* No support *)
   in
   let tounicode_reverse_table, use_tounicode =
-    match Pdf.lookup_direct pdf "/ToUnicode" fontobj with
-    | Some tounicode ->
+    match find_tounicode font with
+    | Some parsed ->
         if debug then Printf.printf "Found a /ToUnicode table here.\n";
+        let parsed = list_of_hashtbl parsed in
         begin try
-          let parsed = parse_tounicode pdf tounicode in
             if debug then
               iter
                 (fun (charcode, utf16be_str) -> Printf.printf "/ToUnicode entry %i --> %s\n" charcode utf16be_str)
